# pvm

./: CMakeLists.txt  main.cpp  opcode.h
code/: binaryFileParser.cpp  binaryFileParser.h  codeObject.cpp  codeObject.h  codeObjet.h  opcode.h
memory/: heap.cpp  heap.h  oopClosure.cpp  oopClosure.h  space.cpp  space.h
object/: cellObject.cpp  cellObject.h  codeObject.cpp  codeObject.h  dictObject.cpp  dictObject.h  functionObject.cpp  functionObject.h  integerObject.cpp  integerObject.h  klass.cpp  klass.h  listObject.cpp  listObject.h  object.cpp  object.h  pInteger.cpp  pInteger.h  pObject.cpp  pObject.h  pString.cpp  pString.h  stringObject.cpp  stringObject.h  typeObject.cpp  typeObject.h
runtime/: frame.cpp  frame.h  frameObject.cpp  frameObject.h  interpreter.cpp  interpreter.h  universe.cpp  universe.h
utils/: arrayList.cpp  arrayList.h  bufferedInputStream.cpp  bufferedInputStream.h  map.h
